--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,22 @@ matrix:
     - os: osx
       env: BUILD=native CC=clang CXX=clang++ FRAMEWORK=SDL2
       language: c
-    
+
+    # Android builds
+    - os: linux
+      env: BUILD=android 
+      language: android
+      android:
+        components:
+            - build-tools-21.1.1
+            - android-15
+            - sys-img-armeabi-v7a-android-15
+
+    - os: osx
+      env: BUILD=android
+      language: android
+      
+
     # IOS builds 
     - os: osx
       env: BUILD=IOS
@@ -75,6 +90,9 @@ matrix:
     
     - os: linux
       env: BUILD=emscripten
+      
+    - os: osx
+      env: BUILD=android
 
 before_install:
   - touch ~/error.log
@@ -92,6 +110,7 @@ install:
 
 
     # Native OSX Build setup
+    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
     - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "native" ]; then brew install scons; fi
     - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install sdl sdl2 sdl_net sdl2_net; fi
 
@@ -194,8 +213,27 @@ install:
     - if [ "$BUILD" == "IOS" ]; then mkdir ~/Library/Frameworks/; fi 
     - if [ "$BUILD" == "IOS" ]; then cp -r build/sdl/SDL2.framework ~/Library/Frameworks/; fi
 
+# Setting up Android build
+    
+    - if [ "$BUILD" == "android" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install ant ; fi  
+    - if [ "$BUILD" == "android" ] && [ "$TRAVIS_OS_NAME" == "linux" ]; then wget http://dl.google.com/android/ndk/android-ndk-r10e-linux-x86_64.bin -O ndk.bin; fi
 
+    - if [ "$BUILD" == "android" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install ant android-sdk ; fi 
+    - if [ "$BUILD" == "android" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then export ANDROID_HOME=/usr/local/opt/android-sdk; fi
+    
 
+    - if [ "$BUILD" == "android" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then wget http://dl.google.com/android/ndk/android-ndk-r10e-darwin-x86_64.bin -O ndk.bin; fi
+   
+   
+    - if [ "$BUILD" == "android" ]; then chmod a+x ndk.bin; fi     
+    - if [ "$BUILD" == "android" ]; then ./ndk.bin > /dev/null; fi   
+    - if [ "$BUILD" == "android" ]; then mv android-ndk-r10e android-ndk; fi
+    - if [ "$BUILD" == "android" ]; then export PATH=`pwd`/android-ndk:$PATH; fi     
+    - if [ "$BUILD" == "android" ]; then cd ~/build/RossMeikleham/PlutoBoy/build/Android ; fi     
+    
+    - if [ "$BUILD" == "android" ]; then android update project -p .; fi     
+    - if [ "$BUILD" == "android" ]; then hg clone http://hg.libsdl.org/SDL jni/SDL; fi     
+  
 
 after_failure:
     tail ~/error.log --lines=1000
@@ -221,3 +259,8 @@ script:
     # IOS Builds
     - if [ "$BUILD" == "IOS" ]; then cd ~/build/RossMeikleham/PlutoBoy/build/IOS; fi
     - if [ "$BUILD" == "IOS" ]; then xcodebuild -project Plutoboy.xcodeproj -target Plutoboy -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO; fi
+
+    # Android Builds
+    - if [ "$BUILD" == "android" ]; then ndk-build; fi     
+    - if [ "$BUILD" == "android" ]; then ant clean; fi     
+    - if [ "$BUILD" == "android" ]; then ant release; fi     
