--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,12 @@ matrix:
       
     - os: osx
       env: BUILD=android
+    
+    -os: osx
+     env: BUILD=dreamcast
+    
+    -os: osx
+     env: BUILD=IOS
 
 before_install:
   - touch ~/error.log
