--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,15 +4,11 @@ environment:
 
   matrix:
     - platform: x64 
-      PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.x" # currently 2.7.10
-      PYTHON_ARCH: "64"
+      PYTHON: "C:\\Python27"
       FRAMEWORK: "SDL"
 
     - platform: x64 
-      PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.x" # currently 2.7.10
-      PYTHON_ARCH: "64"
+      PYTHON: "C:\\Python27"
       FRAMEWORK: "SDL2"
 
 install:
