- Fixed path to emsdk - Fix for Travis bug with rvm on latest OSX

--- a/.travis.yml
+++ b/.travis.yml
@@ -147,7 +147,7 @@ install:
     
     - if [ "$BUILD" == "emscripten" ]; then wget https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-portable.tar.gz; fi
     - if [ "$BUILD" == "emscripten" ]; then tar zxvf emsdk-portable.tar.gz; fi
-    - if [ "$BUILD" == "emscripten" ]; then cd emsdk_portable; fi
+    - if [ "$BUILD" == "emscripten" ]; then cd emsdk-portable; fi
     - if [ "$BUILD" == "emscripten" ]; then ./emsdk update; fi
     - if [ "$BUILD" == "emscripten" ]; then ./emsdk install latest; fi
     - if [ "$BUILD" == "emscripten" ]; then ./emsdk activate latest; fi
@@ -165,7 +165,9 @@ install:
     
     - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$BUILD" == "psp" ]; then sudo apt-get update; fi 
     - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$BUILD" == "psp" ]; then sudo apt-get install g++ build-essential autoconf automake automake1.9 cmake doxygen bison flex libncurses5-dev libsdl1.2-dev libreadline-dev libusb-dev texinfo libgmp3-dev libmpfr-dev libelf-dev libmpc-dev libfreetype6-dev zlib1g-dev libtool subversion tcl unzip libsdl1.2debian; fi
+   
     
+    - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "psp" ]; then rvm get head; 
     - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "psp" ]; then sudo ./prepare-mac-os.sh; fi 
     - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "psp" ]; then curl -o automake.tar.gz http://ftp.gnu.org/gnu/automake/automake-1.9.6.tar.gz; fi
     - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$BUILD" == "psp" ]; then tar -zxvf automake.tar.gz ; fi
