Updated travis for PS Vita builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,12 @@ matrix:
       env: BUILD=dreamcast
       language: c
 
+    - os: linux
+      env: BUILD=vita
+      language: ruby
+      services:
+        - docker
+
   allow_failures:
     - os : linux
       env: BUILD=dreamcast
@@ -104,7 +110,10 @@ before_install:
   - touch ~/error.log
 
 
-install:    
+install:   
+    - if [ "$BUILD" == "vita" ]; then docker build -t plutoboy_vita -f build/Vita/Dockerfile .; fi 
+    - if [" $BUILD" == "vita" ]; then docker run plutoboy_vita; fi
+     
      # Native Linux build setup
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update; fi
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:zoogie/sdl2-snapshots; fi
